@@ -15,49 +15,43 @@ public class ConnectionApiCovid {
 	String urlCon = "https://wuhan-coronavirus-api.laeyoung.endpoint.ainize.ai/jhu-edu/";
 	
 	
-	public Reader connectionWithoutParams(String path) throws IOException {
+	public Reader connectionWithoutParams(String path) throws IOException, URISyntaxException {
 		
+		URL con;
 		urlCon = urlCon.concat(path); 
-		URL con = new URL(urlCon);
+		if(path=="brief") {
+			con = new URL(urlCon);
+		}
+		
+		else {
+			URI u = new URIBuilder(urlCon).addParameter("onlyCountries", "true").build();
+			con = u.toURL();
+		}
+		
 		URLConnection connection = con.openConnection();  
 		connection.setDoOutput(true); 
+		urlCon = "https://wuhan-coronavirus-api.laeyoung.endpoint.ainize.ai/jhu-edu/";
 		
-
 		return new InputStreamReader(connection.getInputStream());
 	
 		
 	}
-	public Reader connectionWithParams(String path, String iso, Boolean onlyCountries) throws URISyntaxException, IOException {
+	public Reader connectionWithParams(String path, String iso) throws URISyntaxException, IOException {
 		
 		urlCon = urlCon.concat(path); 
 		
 	
-		URI u = this.createURI(iso, onlyCountries);
+		URI u = new URIBuilder(urlCon).addParameter(this.tipoIso(iso), iso).build();
 
 		URL c = u.toURL();
 		
 		URLConnection connection = c.openConnection();
-		connection.setDoOutput(true); 
-		
+		connection.setDoOutput(true); 		
 
 		return new InputStreamReader(connection.getInputStream());
-	
 		
 	}
-	
-	public URI createURI (String iso, Boolean onlyCountries) throws URISyntaxException {
-		
-		if(iso==null) {
-			return new URIBuilder(urlCon).addParameter("onlyCountries", onlyCountries.toString()).build();
-		}
-		else if(onlyCountries == null) {
-			return new URIBuilder(urlCon).addParameter(this.tipoIso(iso), iso).build();
-		} else {
-			return new URIBuilder(urlCon).addParameter(this.tipoIso(iso), iso).addParameter("onlyCountries", onlyCountries.toString()).build();
-		}
 
-	}
-	
 	
 	public String tipoIso(String iso) {
 		
